--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "parcel": "^2.7.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "parcel-plugin-static-files-copy": "^2.6.0"
+  },
+  "staticFiles": {
+    "staticPath": "images",
+    "watcherGlob": "**"
   }
 }
